arreglando el diseño

--- a/secciones.html
+++ b/secciones.html
@@ -1,91 +1,92 @@
 <!DOCTYPE html>
 <html lang="en"> 
-<head> &#169 
-    <meta charset="utf-8">
-    <title>Secciones</title>
-   <link rel="icon" type]="image/png" href="logoscouts.png"> 
-    <style>
-        body{
-            background: url(images/bg.gif);
-        }
-        .container{
-            width: 1000px;
-            background: #CDCDCD;
-            margin: auto;
-            border-radius: 25px 
-        }
-        .top{
-            margin-top: 30px
-        }
-        .menu{
-            float: right;
-        }
-        .menu li{
-            display: inline-block;
-        }
-        .menu a{
-            color: black; 
-            text-decoration: none;
-            padding: 20px
-        }
-        .menu a:hover{
-            background: #B52015 
-        }
-        .col{
-            width: 265px;
-            display: inline-block;
-            vertical-align: top;
-            text-align: justify;
-            padding: 20px 
-        }
-        .col h2{
-            color: #B52015  
-        }
-        .row{
-            text-align: center 
-        }
-        .footer{
-            overflow: hidden;
-        }
-        .footer a{
-            color: black; 
-            text-decoration: none;
-        }
-        .footer span{
-            float: left;
-            margin-top: 20px;
-            margin-left: 30px 
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <div class="header">
-            <img src="images/ima4.png" height="75" width="118" alt="">
-            <ul class="menu top">
-                <li><a href="https://scouts.org.mx/">Scouts del mundo</a></li>
-                <li><a href="file:///C:/Users/danie/OneDrive/Documentos/cursohtml/principal.html">Principal</a></li>
-                <li><a href="file:///C:/Users/danie/OneDrive/Documentos/cursohtml/Segundapagina.html">Promesas</a></li>
-                <li><a href="https://obtienearchivo.bcn.cl/obtienearchivo?id=documentos/10221.1/53364/2/253945.pdf">Manual del scout</a></li>
-            </ul>
+    <head>
+        <meta charset="utf-8">
+        <title>Secciones</title>
+        <link rel="icon" type]="image/png" href="logoscouts.png"> 
+        <style>
+            body{
+                background: url(images/bg.gif);
+            }
+            .container{
+                width: 1000px;
+                background: #CDCDCD;
+                margin: auto;
+                border-radius: 25px 
+            }
+            .top{
+                margin-top: 30px
+            }
+            .menu{
+                float: right;
+            }
+            .menu li{
+                display: inline-block;
+            }
+            .menu a{
+                color: black; 
+                text-decoration: none;
+                padding: 20px
+            }
+            .menu a:hover{
+                background: #B52015 
+            }
+            .col{
+                width: 265px;
+                display: inline-block;
+                vertical-align: top;
+                text-align: justify;
+                padding: 20px 
+            }
+            .col h2{
+                color: #B52015  
+            }
+            .row{
+                text-align: center 
+            }
+            .footer{
+                overflow: hidden;
+            }
+            .footer a{
+                color: black; 
+                text-decoration: none;
+            }
+            .footer span{
+                float: left;
+                margin-top: 20px;
+                margin-left: 30px 
+            }
+        </style>
+    </head>
+    <body>
+        <div class="container">
+            <div class="header">
+                <img src="images/ima4.png" height="75" width="118" alt="">
+                <ul class="menu top">
+                    <li><a href="https://scouts.org.mx/">Scouts del mundo</a></li>
+                    <li><a href="principal.html">Principal</a></li>
+                    <li><a href="Segundapagina.html">Promesas</a></li>
+                    <li><a href="https://obtienearchivo.bcn.cl/obtienearchivo?id=documentos/10221.1/53364/2/253945.pdf">Manual del scout</a></li>
+                </ul>
+            </div>
+            <img src="images/ima5.png" height="260" width="1000" alt="">
+            <section>
+                <article>
+                    <h2>Tropa</h2>
+                    <img src="images/ima6.png" height="100" width="265" alt="">
+                    <p>La Tropa Scout es la Sección de jóvenes con edades comprendidas entre los 11 y 14 años. Es una etapa crucial en la vida scout, pues es el periodo de afirmación de uno mismo; donde  la idea de aventura es mas patente, se desarrolla el caracter y la actitud a través de la convivencia, enriqueciendo como persona y potenciando el compromiso con los demás.</p>
+                </article>
+                <article>
+                    <h2>Comunidad</h2>
+                    <img src="images/ima7.png" height="100" width="265" alt="">
+                    <p>Esta sección se caracteriza por el uniforme Azul, su rango de edad va de los 15 a los 18 años. Se agrupan en el sistema de Equipos que son de 3 a 6 integrantes. También pueden crear Grupos de Trabajo para proyectos específicos. Pueden ser Comunidades Mixtas, con equipos Mixtos o Separados, tu grupo escogerá la manera mas adecuada para trabajar.</p>
+                </article>
+                <article>
+                    <h2>Clan</h2>
+                    <img src="images/ima8.png" height="100" width="265" alt="">
+                    <p>Los Clanes de Rovers trabajan como un conjunto de individuos que se organizan en Comisiones según el proyecto que se esté realizando, es decir, no existen equipos. Aquellos que hayan sido investidos como Rovers conformanel Consejo Rover. Al frente de la Sección hay un responsable adulto por cada 12 muchachos. Esta conformado de mujeres y hombres de entre 18 y 23 años de edad</p>
+                </article>
+            </section>
         </div>
-        <img src="images/ima5.png" height="260" width="1000" alt="">
-        <div class="row">
-            <div class="col">
-                <h2>Tropa</h2>
-                <img src="images/ima6.png" height="100" width="265" alt="">
-                <p>La Tropa Scout es la Sección de jóvenes con edades comprendidas entre los 11 y 14 años. Es una etapa crucial en la vida scout, pues es el periodo de afirmación de uno mismo; donde  la idea de aventura es mas patente, se desarrolla el caracter y la actitud a través de la convivencia, enriqueciendo como persona y potenciando el compromiso con los demás.</p>
-            </div>
-                <div class="col">
-                <h2>Comunidad</h2>
-                <img src="images/ima7.png" height="100" width="265" alt="">
-                <p>Esta sección se caracteriza por el uniforme Azul, su rango de edad va de los 15 a los 18 años. Se agrupan en el sistema de Equipos que son de 3 a 6 integrantes. También pueden crear Grupos de Trabajo para proyectos específicos. Pueden ser Comunidades Mixtas, con equipos Mixtos o Separados, tu grupo escogerá la manera mas adecuada para trabajar.</p>
-            </div>
-                <div class="col">
-                <h2>Clan</h2>
-                <img src="images/ima8.png" height="100" width="265" alt="">
-                <p>Los Clanes de Rovers trabajan como un conjunto de individuos que se organizan en Comisiones según el proyecto que se esté realizando, es decir, no existen equipos. Aquellos que hayan sido investidos como Rovers conformanel Consejo Rover. Al frente de la Sección hay un responsable adulto por cada 12 muchachos. Esta conformado de mujeres y hombres de entre 18 y 23 años de edad</p>
-            </div>
-    </div>
-</body>
+    </body>
 </html>
